organize now and past data in uses section

--- a/themes/omid-dev/i18n/de.yaml
+++ b/themes/omid-dev/i18n/de.yaml
@@ -98,6 +98,12 @@
 - id: instant_messaging
   translation: "Instant Messaging"
 
+- id: current_setup
+  translation: "Aktuelle Konfiguration"
+
+- id: history_memories
+  translation: "Geschichte & Erinnerungen"
+
 - id: save_contact
   translation: "Kontakt speichern"
 
