--- a/themes/omid-dev/i18n/fa.yaml
+++ b/themes/omid-dev/i18n/fa.yaml
@@ -200,6 +200,18 @@
 - id: discussion_desc
   translation: "این پست برایتان جالب بود؟ مشتاقم نظرات، سوالات یا بازخوردهای شما را در این پلتفرم‌ها بشنوم:"
 
+- id: webmentions_likes
+  translation: "پسندها"
+
+- id: webmentions_reposts
+  translation: "بازنشرها"
+
+- id: webmentions_mentions
+  translation: "اشاره‌ها و پاسخ‌ها"
+
+- id: no_webmentions
+  translation: "هنوز گفتگویی شکل نگرفته است. شما اولین نفر باشید!"
+
 - id: discuss_on
   translation: "گفتگو در {{ .Platform }}"
 
